--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Bubble Sorting</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./4geeks.ico" />
+    <!-- <link rel="shortcut icon" href="./4geeks.ico" /> -->
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+      <!-- <img
+        id="logo"
+        src="http://assets.breatheco.de/apis/img/images.php?blob&random&cat=icon&tags=breathecode,32"
+      /> -->
+      <h4>
+        Original: <input id="amount" type="text" value="6" /><button id="draw">
+          draw</button
+        ><button id="sort">Sort</button>
+      </h4>
+      <div class="deck unsorted"></div>
+      <h4>Select Sort Log:</h4>
+      <ul class="solution-log"></ul>
     </div>
   </body>
 </html>
